[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pionex-mcp"
version = "0.1.0"
description = "Pionex trading MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.23.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "starlette>=0.37.2",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
test = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
pionex-mcp = "pionex_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pionex_mcp"]
